// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should correctly rener EspensesSummary with 1 expense 1`] = `
<div>
  <h1>
    Viewing 
    1
     
    expense
     totalling 
    $234.54
  </h1>
</div>
`;

exports[`should correctly rener EspensesSummary with multiple expenses 1`] = `
<div>
  <h1>
    Viewing 
    2
     
    expenses
     totalling 
    $234.54
  </h1>
</div>
`;
